increased max memory size for running tests, to avoid OutOfMemoryError on JDK 1.3
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@8306 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8